# ocaml-metal

./: CHANGELOG.md  README.md  dune-project  metal.opam  metal.opam.template
.github/workflows/: ci.yml  gh-pages.yml
data/: Choosing a resource storage mode for Apple GPUs.txt  Creating an Indirect Command Buffer.txt  Creating binary archives from device-built pipeline state objects.txt  MTLBinaryArchive.txt  MTLBinaryArchiveDescriptor.txt  MTLBlitCommandEncoder.txt  MTLBuffer.txt  MTLCommandBuffer.txt  MTLCommandEncoder.txt  MTLCommandQueue.txt  MTLCommandQueueDescriptor.txt  MTLCompileOptions.txt  MTLComputeCommandEncoder.txt  MTLComputePipelineState.txt  MTLCopyAllDevices.txt  MTLCreateSystemDefaultDevice.txt  MTLDevice.txt  MTLDynamicLibrary.txt  MTLEvent.txt  MTLFence.txt  MTLFunction.txt  MTLFunctionOptions.txt  MTLIndirectCommandBuffer.txt  MTLIndirectComputeCommand.txt  MTLLibrary.txt  MTLLogLevel.txt  MTLLogState.txt  MTLLogStateDescriptor.txt  MTLRegion.txt  MTLResource.txt  MTLResourceOptions.txt  MTLSharedEvent.txt  MTLSize.txt  Metal.bridgesupport  Necessary to bind.txt  Performing calculations on a GPU.txt  Setting up a command structure.txt  Transferring data between connected GPUs.txt
data/Metal/: MTLAccelerationStructureInstanceDescriptor.ml  MTLAccelerationStructureMotionInstanceDescriptor.ml  MTLAccelerationStructureSizes.ml  MTLAccelerationStructureUserIDInstanceDescriptor.ml  MTLAxisAlignedBoundingBox.ml  MTLClearColor.ml  MTLComponentTransform.ml  MTLCoordinate2D.ml  MTLCounterResultStageUtilization.ml  MTLCounterResultStatistic.ml  MTLCounterResultTimestamp.ml  MTLDispatchThreadgroupsIndirectArguments.ml  MTLDrawIndexedPrimitivesIndirectArguments.ml  MTLDrawPatchIndirectArguments.ml  MTLDrawPrimitivesIndirectArguments.ml  MTLIndirectAccelerationStructureInstanceDescriptor.ml  MTLIndirectAccelerationStructureMotionInstanceDescriptor.ml  MTLIndirectCommandBufferExecutionRange.ml  MTLMapIndirectArguments.ml  MTLOrigin.ml  MTLPackedFloatQuaternion.ml  MTLQuadTessellationFactorsHalf.ml  MTLRegion.ml  MTLResourceID.ml  MTLSamplePosition.ml  MTLScissorRect.ml  MTLSize.ml  MTLSizeAndAlign.ml  MTLStageInRegionIndirectArguments.ml  MTLTextureSwizzleChannels.ml  MTLTriangleTessellationFactorsHalf.ml  MTLVertexAmplificationViewMapping.ml  MTLViewport.ml  Metal_globals.ml
debug/: advanced_tests.ml  basic_tests.ml  coverage_utils.ml  dune  error_tests.ml  saxpy.ml
dev/: index.html
dev/metal/: index.html
dev/metal/Metal/BlitCommandEncoder/: index.html
dev/metal/Metal/Buffer/: index.html
dev/metal/Metal/CompileOptions/: index.html
dev/metal/Metal/ComputePipelineState/: index.html
dev/metal/Metal/DynamicLibrary/: index.html
dev/metal/Metal/Event/: index.html
dev/metal/Metal/Fence/: index.html
dev/metal/Metal/FunctionType/: index.html
dev/metal/Metal/IndirectCommandBuffer/: index.html
dev/metal/Metal/IndirectComputeCommand/: index.html
dev/metal/Metal/Range/: index.html
dev/metal/Metal/ResourceUsage/: index.html
dev/metal/Metal/Size/: index.html
docs/: index.html
docs/metal/: index.html
docs/metal/Metal/: index.html
docs/metal/Metal/BlitCommandEncoder/: index.html
docs/metal/Metal/Buffer/: index.html
docs/metal/Metal/CommandBuffer/: index.html
docs/metal/Metal/CommandEncoder/: index.html
docs/metal/Metal/CommandQueue/: index.html
docs/metal/Metal/CommandQueueDescriptor/: index.html
docs/metal/Metal/CompileOptions/: index.html
docs/metal/Metal/ComputeCommandEncoder/: index.html
docs/metal/Metal/ComputePipelineDescriptor/: index.html
docs/metal/Metal/ComputePipelineState/: index.html
docs/metal/Metal/Device/: index.html
docs/metal/Metal/DynamicLibrary/: index.html
docs/metal/Metal/Event/: index.html
docs/metal/Metal/Fence/: index.html
docs/metal/Metal/Function/: index.html
docs/metal/Metal/FunctionType/: index.html
docs/metal/Metal/IndirectCommandBuffer/: index.html
docs/metal/Runtime/: index.html
lib/: dune  metal-attic.ml  metal.ml  metal.mli
objc/: README.md  arch.ml  define.ml  dune  function_description.ml  inspect.ml  objc_type.ml  objc_type.mli  runtime.ml  type_description.ml
test/: COVERAGE.md  advanced_tests.expected  advanced_tests.ml  advanced_tests_icb.expected  advanced_tests_icb.ml  basic_tests.expected  basic_tests.ml  coverage_tests.expected  coverage_tests.ml  coverage_utils.ml  dune  error_tests.expected  error_tests.ml  logging_tests.expected  logging_tests.ml  saxpy.expected  saxpy.ml  sync_test.ml  test_io_buffer.ml  test_sync.ml
(+57 files in other folders)
