(test
 (name basic_tests)
 (deps basic_tests.expected)
 (libraries metal ctypes.foreign))

(test
 (name error_tests)
 (deps error_tests.expected)
 (libraries metal ctypes.foreign))

(test
 (name advanced_tests)
 (deps advanced_tests.expected)
 (libraries metal ctypes.foreign))

(test
 (name coverage_tests)
 (deps coverage_tests.expected)
 (libraries metal ctypes.foreign))

(test
 (name saxpy)
 (deps saxpy.expected)
 (libraries metal ctypes.foreign bigarray))

; This test fails if run on CI "paravirtual machine".

(test
 (name advanced_tests_icb)
 (enabled_if
  (= %{env:OCAML_METAL_SKIP_ICB_TEST=false} false))
 (deps advanced_tests_icb.expected)
 (libraries metal ctypes.foreign))

; CI GPU family does not support MSL 3.2 / logging.

(test
 (name logging_tests)
 (enabled_if
  (= %{env:OCAML_METAL_SKIP_LOGGING_TEST=false} false))
 (deps logging_tests.expected)
 (libraries metal ctypes.foreign))
